--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,6 +6,7 @@
 }
 @font-face {
   font-family: "inter";
+  src: url("./fonts/Inter-Bold.ttf") format("woff");
   src: url("./fonts/Inter-Regular.ttf") format("woff");
 }
 @font-face {
@@ -17,8 +18,6 @@ body {
   background-color: var(--primary);
   color: var(--secondary);
   font-family: "inter", sans-serif;
-  padding: 0 8px;
-}
-#map {
-  height: 100vh;
+  /* padding: 0 8px; */
+  margin: 0;
 }
