Fix(loading) : css + bug loading

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -37,6 +37,10 @@ body {
 textarea#prompt {
   text-align: start;
   padding: 12px;
+  resize: none;
+}
+textarea#prompt:focus-visible {
+  border: 1px solid red;
 }
 
 .box {
